<?xml version="1.0"?>
<package>
  <name>tue_control_rtt</name>
  <version>0.0.0</version>
  <description>RTT Control component implementation based on the tue_control package</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <run_depend>rtt</run_depend>

  <build_depend>ocl</build_depend>
  <run_depend>ocl</run_depend>

  <build_depend>orogen</build_depend>
  <run_depend>orogen</run_depend>

  <build_depend>rtt_ros</build_depend>
  <run_depend>rtt_ros</run_depend>

  <build_depend>rtt_roscomm</build_depend>
  <run_depend>rtt_roscomm</run_depend>

  <build_depend>diagnostic_msgs</build_depend>
  <run_depend>diagnostic_msgs</run_depend>

  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

  <build_depend>tue_control_rtt_msgs</build_depend>
  <run_depend>tue_control_rtt_msgs</run_depend>

  <build_depend>tue_control</build_depend>
  <run_depend>tue_control</run_depend>

  <build_depend>tue_config</build_depend>
  <run_depend>tue_config</run_depend>

  <!-- For reference generator -->
  <build_depend>tue_manipulation</build_depend>
  <run_depend>tue_manipulation</run_depend>

  <build_depend>rtt_actionlib</build_depend>
  <run_depend>rtt_actionlib</run_depend>

  <export>
    <rtt_ros>
        <plugin_depend>rtt_diagnostic_msgs</plugin_depend>
        <plugin_depend>rtt_sensor_msgs</plugin_depend>
        <plugin_depend>tue_control_rtt_msgs</plugin_depend>
        <plugin_depend>rtt_actionlib</plugin_depend>
        <plugin_depend>rtt_control_msgs</plugin_depend>
    </rtt_ros>
  </export>

</package>
